--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: lightcyan;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 h2 {
     padding: 20px;
-    color: limegreen;
+    color: lightgreen;
+    text-align: center;
 }
