--- a/src/components/itemTodo.scss
+++ b/src/components/itemTodo.scss
@@ -35,7 +35,7 @@
     }
 }
 .completed {
-    background-color: limegreen;
+    background-color: lightgreen;
     h3 {
         text-decoration: line-through;
     }
