--- a/src/components/listTodo.scss
+++ b/src/components/listTodo.scss
@@ -1,7 +1,7 @@
 .list {
     width: min(80%, 600px);
+    margin: 0 auto;
     font-size: clamp(16px, 3vw, 18px);
-    font-variant: small-caps;
     line-height: 26px;
     fieldset{
         display: flex;
